crates/pack-containment/tests/ui/raw_admission_document.rs
use actingcommand_pack_containment::admission::RawRecognitionDocument;

fn main() {
    let _ = std::mem::size_of::<RawRecognitionDocument>();
}
